# historical-stock-analysis

./: CLAUDE.md  eda.ipynb  main.py  pyproject.toml
assignments/: 26120004_2_Assignment2.docx  Assignment2_EDA.docx
docs/: dataset-primer.html
scripts/: build_docx.py
