[project]
name = "historical-stock-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.1",
    "nbformat>=5.10.4",
    "pandas>=3.0.5",
    "plotly>=6.9.0",
    "python-docx>=1.2.0",
    "seaborn>=0.13.2",
]
